--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="/img/Papera.svg">
+
+    <title>Il tuo titolo</title>
+    <meta property="og:title" content="Un invito per te">
+    <meta property="og:description" content="Primo compleanno di Enea">
+    <meta property="og:image" content="img/Anteprima.png">
+    <meta property="og:url" content="https://danilotomaccio.github.io/invitoEnea/">
+    <meta name="twitter:card" content="summary_large_image">
+
     <title>Un anno Enea</title>
 
     <link rel="stylesheet" href="style.css">
