--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/img/Papera.svg">
+    <link rel="icon" type="image/svg+xml" href="img/Papera.svg">
 
     <title>Il tuo titolo</title>
     <meta property="og:title" content="Un invito per te">
