--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <title>Un anno Enea</title>
 
+    <link rel="stylesheet" href="https://use.typekit.net/dvs5jvb.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
