--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="img/Papera.svg">
 
-    <title>Il tuo titolo</title>
+    <title>Un anno Enea</title>
     <meta property="og:title" content="Un invito per te">
     <meta property="og:description" content="Primo compleanno di Enea">
     <meta property="og:image" content="img/Anteprima.png">
