--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 </div>
             </div>
 
+            <div id="ora" class="moonblossom">
+                Ore 18:30
+            </div>
+
             <div id="indirizzo" class="moonblossom">
                 agriturismo la reginella,
                 strada provinciale 34,
