--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 Ore 18:30
             </div>
 
+            <div id="rinfresco" class="chaloops">
+                per un rinfresco presso
+            </div>
+
             <div id="indirizzo" class="moonblossom">
                 agriturismo la reginella,
                 strada provinciale 34,
