--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             window.open('evento.ics', '_blank');
         });
     </script>
+
+    <script src="shake.js"></script>
 </body>
 
 </html>
