--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <script>
         const addressBarHeight = window.outerHeight - window.innerHeight;
         if (addressBarHeight > 0) {
-            document.getElementById("foreground").style.paddingTop = addressBarHeight;
+            document.getElementById("foreground").style.paddingTop = addressBarHeight + 'px';
         }
     </script>
 
