--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <script>
         const addressBarHeight = window.outerHeight - window.innerHeight;
-        if (addressBarHeight > 0) {
+        if (addressBarHeight >= 0) {
             document.getElementById("foreground").style.paddingTop = addressBarHeight + 'px';
         }
     </script>
