--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
 
-    <div class="bg">
-    </div>
+    <div id="background" class="bg"></div>
     <div id="foreground" class="fg">
         <img class="papera" src="img/Papera.svg" alt="">
         <!-- <img id="testo" class="testo" src="img/Testo.svg" alt=""> -->
@@ -122,6 +121,8 @@
 
     <script>
         const addressBarHeight = window.outerHeight - window.innerHeight;
+        document.getElementById("foreground").style.height = window.innerHeight + 'px';
+        document.getElementById("background").style.height = window.innerHeight + 'px';
         if (addressBarHeight >= 0) {
             document.getElementById("foreground").style.paddingTop = addressBarHeight + 'px';
         }
