--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 
 
     </div>
-    <img id="bolla" class="bolla" src="img/Bolla.svg" alt="">
+
+    <div id="bolle">
+        <img id="bolla" class="bolla" src="img/Bolla.svg" alt="">
+    </div>
 
     <script>
         const img = new Image();
