--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <script>
         const img = new Image();
-        img.src = 'img/Sfondo.svg';
+        img.src = 'img/Sfondo.png';
         img.onload = function () {
             document.getElementById('foreground').style.display = 'flex';
         };
