--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         document.getElementById("foreground").style.height = window.innerHeight + 'px';
         document.getElementById("background").style.height = window.innerHeight + 'px';
         if (addressBarHeight >= 0) {
-            document.getElementById("foreground").style.paddingTop = addressBarHeight + 'px';
+            // document.getElementById("foreground").style.paddingTop = addressBarHeight + 'px';
         }
     </script>
 
