--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Un invito per te">
     <meta property="og:description" content="Primo compleanno di Enea">
     <meta property="og:image" content="img/Anteprima.png">
-    <meta property="og:url" content="https://danilotomaccio.github.io/invitoEnea/">
+    <meta property="og:url" content="https://yellowdonkey.it">
     <meta name="twitter:card" content="summary_large_image">
 
     <title>Un anno Enea</title>
